Description for SAM

--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -191,7 +191,7 @@ Job Launches: {{launches}}
             <div class="meta">
             </div>
             <div class="description">
-                SAM status for {{session_experiment}}.
+                SAM is a data handling system, to keep track of files, their meta-data and processing.
             </div>
         </div>
         <div class="ui three bottom attached buttons">
