Working on facade

--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -160,8 +160,10 @@
 <h3>Campaign Stages
     <button class="ui button" type="submit" value="save">Save</button>
 </h3>
+<div id="outer_gui_editor_frame"></div>
+
+<div id="mystages" oncontextmenu='return false;' contextmenu=""></div>
 <div id="mydefaults" oncontextmenu='return false;' contextmenu=""></div>
-<div id="outer_gui_editor_frame" oncontextmenu='return false;' contextmenu=""></div>
 <!--
 <h3>Campaign Login/Setup and Jobtypes</h3>
 -->
