--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -115,6 +115,12 @@ div.box.selected {
     border: 1px solid lightgray;
 }
 
+#mystages {
+    width: 1000px;
+    height: 600px;
+    border: 1px solid lightgray;
+}
+
 #mydefaults, #myjobtypes {
     width: 1000px;
     height: 100px;
