Functional stage/deps create/save/restore

--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -158,7 +158,7 @@
 </form>
 
 <h3>Campaign Stages
-    <button class="ui button" type="submit" value="save">Save</button>
+    <button class="ui button" onclick="gui_editor.save('gui_editor_0');">Save</button>
 </h3>
 <div id="mydefaults" oncontextmenu='return false;' contextmenu=""></div>
 <div id="mystages" oncontextmenu='return false;' contextmenu=""></div>
@@ -167,7 +167,7 @@
 -->
 <div id="myjobtypes" oncontextmenu='return false;' contextmenu=""></div>
 <pre id="eventSpan"></pre>
-<div id="outer_gui_editor_frame"></div>
+<div id="outer_gui_editor_frame" style="display: none;"></div>
 
 <script type="text/javascript">
 
