Fix old 'tag_name'

--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -26,7 +26,7 @@ Search Term: {{search_term}}
   <tbody>
   {% for row in results %}
   <tr>
-      <td>{{row.Campaign.tag_name}}</td>
+      <td>{{row.Campaign.name}}</td>
       <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{row.campaign_stage_id}}">{{row.CampaignStage.name}}</a></td>
   </tr>
   {% endfor %}
