--- a/webservice/templates/show_campaign_stages.html
+++ b/webservice/templates/show_campaign_stages.html
@@ -71,19 +71,20 @@ Campaign Stages{%include 'help_button.html'%}
         </thead>
 
         <tbody>
-            {% for campaign in campaign_stages %}
+            {% for stage in campaign_stages %}
                 <tr id="c_tr_{{loop.index}}">
-                    <td id="c_id_{{loop.index}}">{{campaign.campaign_stage_id}}</td>
+                    <td id="c_id_{{loop.index}}">{{stage.campaign_stage_id}}</td>
                     <td align="center"><input type="checkbox" id="c_cbox_{{loop.index}}" {{ 'disabled' if data.authorized[loop.index-1]!=True }}></td>
-                    <td>{{ campaign.campaign_campaign_stages | join('<br>', attribute='tag_obj.tag_name') }}</td>
-                    <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{campaign.campaign_stage_id}}">{{campaign.name}}</a></td>
-                    <td>{{ 'Yes' if campaign.active else 'No' }}</td>
-                    <td>{{campaign.experimenter_holder_obj.username}}</td>
-                    <td>{{campaign.experimenter_creator_obj.username}}</td>
-                    <td>{{campaign.created.strftime('%Y-%m-%d %H:%M:%S')}}</td>
-                    <td>{{campaign.experimenter_updater_obj.username}}</td>
-                    <td>{%if None == campaign.updated%}never{%else%}{{campaign.updated.strftime('%Y-%m-%d %H:%M:%S')}}{%endif%}</td>
-                    <td id="c_name_{{loop.index}}" style="display:none">{{campaign.name}}</td>
+                    {# <td>{{ stage.campaign_campaign_stages | join('<br>', attribute='tag_obj.tag_name') }}</td> #}
+                    <td> stage.campaign_campaign_stages | join('<br>', attribute='tag_obj.tag_name') </td>
+                    <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{stage.campaign_stage_id}}">{{stage.name}}</a></td>
+                    <td>{{ 'Yes' if stage.active else 'No' }}</td>
+                    <td>{{stage.experimenter_holder_obj.username}}</td>
+                    <td>{{stage.experimenter_creator_obj.username}}</td>
+                    <td>{{stage.created.strftime('%Y-%m-%d %H:%M:%S')}}</td>
+                    <td>{{stage.experimenter_updater_obj.username}}</td>
+                    <td>{%if None == stage.updated%}never{%else%}{{stage.updated.strftime('%Y-%m-%d %H:%M:%S')}}{%endif%}</td>
+                    <td id="c_name_{{loop.index}}" style="display:none">{{stage.name}}</td>
                 </tr>
             {% endfor %}
         </tbody>
