--- a/webservice/templates/show_campaign_stages.html
+++ b/webservice/templates/show_campaign_stages.html
@@ -75,8 +75,7 @@ Campaign Stages{%include 'help_button.html'%}
                 <tr id="c_tr_{{loop.index}}">
                     <td id="c_id_{{loop.index}}">{{stage.campaign_stage_id}}</td>
                     <td align="center"><input type="checkbox" id="c_cbox_{{loop.index}}" {{ 'disabled' if data.authorized[loop.index-1]!=True }}></td>
-                    {# <td>{{ stage.campaign_campaign_stages | join('<br>', attribute='tag_obj.tag_name') }}</td> #}
-                    <td> stage.campaign_campaign_stages | join('<br>', attribute='tag_obj.tag_name') </td>
+                    <td>{{ stage.campaign_obj.name}}</td>
                     <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{stage.campaign_stage_id}}">{{stage.name}}</a></td>
                     <td>{{ 'Yes' if stage.active else 'No' }}</td>
                     <td>{{stage.experimenter_holder_obj.username}}</td>
