--- a/webservice/templates/unauthorized_user.html
+++ b/webservice/templates/unauthorized_user.html
@@ -3,9 +3,14 @@
   <body bgcolor="white">
     <center><h1>401 Unauthorized User</h1></center>
     <center><p>
-        <h1>Contact your experiment's Production Coordinator.</h1>
-        Your FNAL serves account is not authorized to use POMS.<br>
-        Please do <b>NOT</b> fill out an incident request to POMS as this must go through your experiment.
+        Your account is not authorized to use POMS.  To get access, do the following:
+        -- Open the webpage to <a href="https://fermi.service-now.com/wp" target="_blank">SNOW</a>.
+        -- Select the tile "Request Something".
+        -- Select the tile "Experiment/Project/Collaboration Computing Account".
+        -- Choose your experiment.
+        -- Choose the role "Production".   (Analysis is not yet supported.)
+
+        Please do <b>not</b> fill out an incident or request to POMS as this must go through your experiment.
     </p></center>
   </body>
 </html>
