Added tag functions to show_campaigns.

--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -1,7 +1,7 @@
 {%extends "layout.html"%}
 
 {%block title%}
-POMS Launch/Setup Editor
+POMS Login/Setup Editor
 {%endblock%}
 
 <style type="text/css">
@@ -19,7 +19,7 @@ POMS Launch/Setup Editor
 {% endmacro %}
 
 {%block header%}
-Launch/Setup {{ show_hint('', 'Help page') }}
+Login/Setup {{ show_hint('', 'Help page') }}
 {%endblock%}
 
 {%block subheader%}
