--- a/webservice/templates/sample_workflows.html
+++ b/webservice/templates/sample_workflows.html
@@ -35,7 +35,7 @@ Workflow Samples
                     </a>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/static/samples/{{sample}}">
+                    <a href="{{pomspath}}/static/{{sample}}">
                         <button type="button">
                             <i class="file icon"></i>Workflow ini
                         </button>
